--- a/web/public/css/screen.css
+++ b/web/public/css/screen.css
@@ -7,6 +7,11 @@
 html, body {
   height: 100%;
   font-family: Verdana, Geneva, sans-serif;
+  /* For Internet Explorer 5.5-7 */
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c0c0c0', endColorstr='#e0e0e0');
+  /* For Internet Explorer 8  */
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#c0c0c0ff, endColorstr=#e0e0e0ff)";
+  background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#eee));
   background-image: -moz-linear-gradient(top, #ccc, #eee);
 }
 
@@ -34,6 +39,9 @@ ul, ol {
 /*  border-collapse: collapse;*/
   border-radius: 0.5em;
   padding: 0.5em;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#e0e0e0', endColorstr='#c0c0c0');
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#e0e0e0, endColorstr=#c0c0c0)";
+  background: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#ccc));
   background-image: -moz-linear-gradient(top, #eee, #ccc);
 }
 
@@ -51,12 +59,18 @@ ul, ol {
 }
 
 #sudoku .solution {
-  color: #fff;
+  color: #eee;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#505050', endColorstr='#303030');
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#505050, endColorstr=#303030)";
+  background: -webkit-gradient(linear, left top, left bottom, from(#555), to(#333));
   background-image: -moz-linear-gradient(top, #555, #333);
 }
 
 #sudoku .hint {
   color: #00f;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#b0b0b0', endColorstr='#e0e0e0');
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#b0b0b0, endColorstr=#e0e0e0)";
+  background: -webkit-gradient(linear, left top, left bottom, from(#bbb), to(#eee));
   background-image: -moz-linear-gradient(top, #bbb, #eee);
 }
 
@@ -118,6 +132,9 @@ ul, ol {
   padding: 5px;
   margin: 5px;
   width: 150px;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c0c0c0', endColorstr='#e0e0e0');
+  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#c0c0c0, endColorstr=#e0e0e0)";
+  background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#eee));
   background-image: -moz-linear-gradient(top, #ccc, #eee);
 }
 
@@ -133,5 +150,8 @@ ul, ol {
     margin: 5px;
     border:1px solid #000;
     border-radius: 0.3em;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#a0d090', endColorstr='#e09090', GradientType=1);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#a0d090, endColorstr=#e09090, GradientType=1)";
+    background: -webkit-gradient(linear, left top, right top, from(#ad9), to(#e99));
     background-image: -moz-linear-gradient(left, #ad9, #e99);
 }
