create pdf book

--- a/web/layout/default.rhtml
+++ b/web/layout/default.rhtml
@@ -17,10 +17,19 @@
   </head>
 
   <body>
+
+    <div id="menu" name="menu">
+      <ul>
+        <li><a href="/">Sudoku</a></li>
+        <li><a href="/book">Print Book</a></li>
+      </ul>
+    </div>
+
     <center>
-      <div id="content">
+      <div id="content" name="content">
         <%= @content %>
       </div>
     </center>
+
   </body>
 </html>
