fix: check solution

--- a/web/view/index.rhtml
+++ b/web/view/index.rhtml
@@ -1,7 +1,7 @@
 <%
   bg = ""
-  bg = 'style="background:#dfd"' if @message
-  bg = 'style="background:#f00"' if @error
+  bg = 'style="background:#0c0"' if @message
+  bg = 'style="background:#c00"' if @error
 %>
 <center>
   <form method="POST">
