--- a/web/public/css/screen.css
+++ b/web/public/css/screen.css
@@ -13,6 +13,7 @@ html, body {
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#c0c0c0ff, endColorstr=#e0e0e0ff)";
   background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#eee));
   background-image: -moz-linear-gradient(top, #ccc, #eee);
+  background-image: -o-linear-gradient(top, #ccc, #eee);
 }
 
 h1 {
@@ -43,6 +44,7 @@ ul, ol {
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#e0e0e0, endColorstr=#c0c0c0)";
   background: -webkit-gradient(linear, left top, left bottom, from(#eee), to(#ccc));
   background-image: -moz-linear-gradient(top, #eee, #ccc);
+  background-image: -o-linear-gradient(top, #eee, #ccc);
 }
 
 #sudoku td, .solution, .hint {
@@ -64,6 +66,7 @@ ul, ol {
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#505050, endColorstr=#303030)";
   background: -webkit-gradient(linear, left top, left bottom, from(#555), to(#333));
   background-image: -moz-linear-gradient(top, #555, #333);
+  background-image: -o-linear-gradient(top, #555, #333);
 }
 
 #sudoku .hint {
@@ -72,6 +75,7 @@ ul, ol {
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#b0b0b0, endColorstr=#e0e0e0)";
   background: -webkit-gradient(linear, left top, left bottom, from(#bbb), to(#eee));
   background-image: -moz-linear-gradient(top, #bbb, #eee);
+  background-image: -o-linear-gradient(top, #bbb, #eee);
 }
 
 #sudoku .empty {
@@ -136,6 +140,7 @@ ul, ol {
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#c0c0c0, endColorstr=#e0e0e0)";
   background: -webkit-gradient(linear, left top, left bottom, from(#ccc), to(#eee));
   background-image: -moz-linear-gradient(top, #ccc, #eee);
+  background-image: -o-linear-gradient(top, #ccc, #eee);
 }
 
 #new select {
@@ -154,6 +159,7 @@ ul, ol {
     -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#a0d090, endColorstr=#e09090, GradientType=1)";
     background: -webkit-gradient(linear, left top, right top, from(#ad9), to(#e99));
     background-image: -moz-linear-gradient(left, #ad9, #e99);
+    background-image: -o-linear-gradient(left, #ad9, #e99);
 }
 
 .page_layout .lname, .page_layout input {
