--- a/web/view/index.rhtml
+++ b/web/view/index.rhtml
@@ -7,6 +7,9 @@
 
   <form method="POST">
 
+    <div id="help">
+    </div>
+
     <div id="new" <%=bg%> >
       <select name="chars" class="button">
         <option value="numeric" <%= @chars==:numeric ? 'selected="true"' : '' %>>1..9</option>
