--- a/web/layout/default.rhtml
+++ b/web/layout/default.rhtml
@@ -23,6 +23,7 @@
       <ul>
         <li><a href="/">Sudoku</a></li>
         <li><a href="/book">Print Book</a></li>
+        <li><a href="/about">About</a></li>
       </ul>
     </div>
 
