--- a/web/view/book.rhtml
+++ b/web/view/book.rhtml
@@ -1,5 +1,5 @@
 <center>
-  <form class="page_layout">
+  <form id="book" name="book" class="page_layout">
     <select class="button" name="format">
       <option value="A4" selected="true">A4</option>
       <option value="LETTER">Letter</option>
